; ModuleID = '/home/carl/AnghaBench/seafile/common/extr_fs-mgr.c_seaf_fs_manager_traverse_path.c'
source_filename = "/home/carl/AnghaBench/seafile/common/extr_fs-mgr.c_seaf_fs_manager_traverse_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [35 x i8] c"Failed to get dirent for %.8s:%s.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @seaf_fs_manager_traverse_path(i32* %0, i8* %1, i32 %2, i8* %3, i8* %4, i32 %5, i8* %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i32, align 4
  store i32* %0, i32** %9, align 8
  store i8* %1, i8** %10, align 8
  store i32 %2, i32* %11, align 4
  store i8* %3, i8** %12, align 8
  store i8* %4, i8** %13, align 8
  store i32 %5, i32* %14, align 4
  store i8* %6, i8** %15, align 8
  store i32 0, i32* %17, align 4
  %18 = load i32*, i32** %9, align 8
  %19 = load i8*, i8** %10, align 8
  %20 = load i32, i32* %11, align 4
  %21 = load i8*, i8** %12, align 8
  %22 = load i8*, i8** %13, align 8
  %23 = call i32* @seaf_fs_manager_get_dirent_by_path(i32* %18, i8* %19, i32 %20, i8* %21, i8* %22, i32* null)
  store i32* %23, i32** %16, align 8
  %24 = load i32*, i32** %16, align 8
  %25 = icmp ne i32* %24, null
  br i1 %25, label %30, label %26

26:                                               ; preds = %7
  %27 = load i8*, i8** %10, align 8
  %28 = load i8*, i8** %13, align 8
  %29 = call i32 @seaf_warning(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %27, i8* %28)
  store i32 -1, i32* %8, align 4
  br label %42

30:                                               ; preds = %7
  %31 = load i32*, i32** %9, align 8
  %32 = load i8*, i8** %10, align 8
  %33 = load i32, i32* %11, align 4
  %34 = load i8*, i8** %13, align 8
  %35 = load i32*, i32** %16, align 8
  %36 = load i32, i32* %14, align 4
  %37 = load i8*, i8** %15, align 8
  %38 = call i32 @traverse_dir_path(i32* %31, i8* %32, i32 %33, i8* %34, i32* %35, i32 %36, i8* %37)
  store i32 %38, i32* %17, align 4
  %39 = load i32*, i32** %16, align 8
  %40 = call i32 @seaf_dirent_free(i32* %39)
  %41 = load i32, i32* %17, align 4
  store i32 %41, i32* %8, align 4
  br label %42

42:                                               ; preds = %30, %26
  %43 = load i32, i32* %8, align 4
  ret i32 %43
}

declare dso_local i32* @seaf_fs_manager_get_dirent_by_path(i32*, i8*, i32, i8*, i8*, i32*) #1

declare dso_local i32 @seaf_warning(i8*, i8*, i8*) #1

declare dso_local i32 @traverse_dir_path(i32*, i8*, i32, i8*, i32*, i32, i8*) #1

declare dso_local i32 @seaf_dirent_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
